Sistemazione corso usando puro spring e postman